--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.6",
+        "date-fns": "^4.1.0",
         "firebase": "^11.8.1",
         "react": "^19.1.0",
+        "react-datepicker": "^8.4.0",
         "react-dom": "^19.1.0",
         "react-hot-toast": "^2.5.2",
         "react-icons": "^5.5.0",
