--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react-icons": "^5.5.0",
         "react-router-dom": "^7.6.0",
         "sweetalert2": "^11.22.0",
+        "swiper": "^11.2.8",
         "tailwindcss": "^4.1.6"
     },
     "devDependencies": {
