--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@react-google-maps/api": "^2.20.7",
         "@tailwindcss/vite": "^4.1.6",
         "date-fns": "^4.1.0",
         "firebase": "^11.8.1",
